--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.2
   sqflite: ^2.3.2
+  build_runner: ^2.4.8
+  flutter_gen_runner: ^5.4.0
+  horizontal_data_table: ^4.3.1
   
 
 dev_dependencies:
@@ -58,8 +61,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-  build_runner: ^2.4.8
-  flutter_gen_runner: ^5.4.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
